# virtual-engineering-workbench

./: .gitallowed  .gitignore  AUTHORS.md  Dockerfile  README.md  SECURITY.md  config.env  deploy.sh
backend/: .gitallowed  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  backend_app.py  bandit.ini  cdk-backend.json  cdk-usecase.json  cdk-vpc.json  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  usecase_app.py  vpc_app.py
backend/app/authorization/libraries/: requirements.txt
backend/app/packaging/libraries/: requirements.txt
backend/app/projects/libraries/: requirements.txt
backend/app/provisioning/libraries/: requirements.txt
backend/app/publishing/libraries/: requirements.txt
backend/app/shared/: config.py  requirements.txt
backend/app/shared/api/: aws_api.py  aws_events_api.py  aws_scheduler_api.py  bounded_contexts.py  parameter_service.py  service_registry.py  (+3 more)
backend/app/tests/: hexagonal_architecture_helpers.py  test_module_import_fitness_function.py
backend/infra/: config.py  constants.py
backend/infra/auth/: packaging_auth.py  packaging_auth_schema.py  projects_auth.py  projects_auth_schema.py  provisioning_auth.py  provisioning_auth_schema.py  publishing_auth.py  publishing_auth_schema.py  shared_auth_schema.py
backend/infra/backend/: authorization_app_stack.py  catalog_service_regional_stack.py  image_key_app_stack.py  image_sharing_app_stack.py  integration_oauth_stack.py  integration_permissions_stack.py  integration_stack.py  packaging_app_stack.py  prerequisites_app_stack.py  product_packaging_app_stack.py  product_publishing_app_stack.py  projects_app_stack.py  provisioning_app_stack.py  publishing_app_stack.py  security_stack.py  service_discovery_stack.py  shared_deployment_infrastructure.py  vew_bounded_context_stack.py
backend/infra/constructs/: backend_app_api_auth.py  backend_app_api_oauth_client.py  backend_app_api_resource_server.py  backend_app_config.py  backend_app_ecs_cluster.py  backend_app_entrypoints.py  backend_app_event_bus.py  backend_app_function.py  backend_app_oauth_authorizer.py  backend_app_openapi.py  backend_app_openapi_oauth.py  backend_app_storage.py  backend_app_task_definition.py  backend_app_waf.py  bundling.py  private_api_gw_alb.py  private_api_gw_endpoint.py  shared_layer.py
backend/infra/helpers/: openapi_parser.py  ops_monitoring.py  ssm_helpers.py
backend/infra/usecase/: prerequisites_app_stack.py  product_publishing_enablement_app_stack.py  provisioning_enablement_stack.py  usecase_app_stack.py
backend/infra/vpc/: vpc_stack.py
backend/scripts/: compile.sh
backend/setup/prerequisites/: vew-spoke-account-bootstrap.yml
(+2066 files in other folders)
